--- a/Survive/index.html
+++ b/Survive/index.html
@@ -10,6 +10,7 @@
     <script src="lib/mapBuilder.js"></script>
     <script src="lib/mapUtils.js"></script>
     <script src="lib/stateManager.js"></script>
+    <script src="lib/stageHelper.js"></script>
     <script src="lib/dev.js"></script>
     <script src="lib/logger.js"></script>
     <script src="lib/game.js"></script>
